Bug fixes for 0.3.1, README.md now has correct quick start code, API.md doc added, examples added
1. Updated pyproject.toml for release 0.3.1 that will include bug #1 fix (Can't instantiate DatabaseDao). Was fixed with pull request #2 Fix string escaping in query parameters and property assignments. This didn't show up with python 3.12, 3.13,  but did with python 3.10, 3.11
Was fixed in dao/database.py which was merged and in previous commit.
2. Updated README.md: For bug #3 Quick Start: Basic Usage fails, the readme.md now has the correct working quick start SQL code (have to use SyncClient and give to DatabaseDao, etc),
added links to docs/API.md, 2 examples/ files, added cypher and gremlin code
3. Added docs/API.md documenting the classes and functions/parms, 4 temp docs used while developing removed
4. examples added quickstart_example.py with quick start code from readme.md, added test_query_langages.py with cypher and gremlin code from readme.md. Removed enhanced_features_demo.py used in development
5. client.py headers() no content type logging level changed from warning to debug
6. sync.py get() and post() logging level changed from info to debug (now won't see all sql calls by default),
7. __init__.py updated to version 0.3.1
8. pyproject.toml, manifest.in: docs and examples added to source release

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,8 @@ include CHANGELOG.md
 include pyproject.toml
 recursive-include arcadedb_python *.py
 recursive-include tests *.py
+recursive-include docs *.md
+recursive-include examples *.py
 global-exclude *.pyc
 global-exclude __pycache__
 global-exclude .pytest_cache
